# STT-with-ChatGPT

./: CHATGPT_ROLE.txt  README.md  apis.py  constants.py  mail.py  run.py  setup.cfg  trigger.py
